create backend for comments

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -15,7 +15,7 @@
   float:left;
   padding-top:0px;
   height: 1300px;
-  background-image: url(http://res.cloudinary.com/dcqvnxgiy/image/upload/v1456954496/f5_mvy8h2.jpg);
+  background-image: url(http://res.cloudinary.com/dcqvnxgiy/image/upload/v1457052594/Xs3OOvu_gdxvm9.gif);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
