--- a/app/assets/stylesheets/navprofile.scss
+++ b/app/assets/stylesheets/navprofile.scss
@@ -48,7 +48,7 @@
       list-style:none;
       width:160px;
       text-align:center;
-      font-family: "Lato","Verdana",sans-serif;
+      font-family: "Lato",sans-serif;
       border: 1px dashed rgba(255,255,255, 0);
       color:#fff;
       padding:10px 0 10px 0;
