--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -11,7 +11,7 @@ $lightblue: #008AAD;
 }
 
 ul, li, h1, h2, h3, h4, h5, h6, p, a, .logo {
-  font-family: "Lato","Verdana",sans-serif;
+  font-family: "Lato", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 400;
