--- a/app/assets/stylesheets/photo.scss
+++ b/app/assets/stylesheets/photo.scss
@@ -66,8 +66,8 @@
   top: -150px;
   opacity: 0;
   margin: 0 0 30px;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
+  font-family: 'Helvetica', sans-serif;
+  font-weight: 350;
   -webkit-transition: all 1s ease 0.01s;
   transition: all 1s ease 0.01s;
   text-shadow:
@@ -128,7 +128,7 @@
 
 .nd-content_1 {
   position: absolute;
-  width: 91%;
+  width: 100%;
   height: 100%;
 
   top: 0;
