--- a/app/assets/stylesheets/photo_show.scss
+++ b/app/assets/stylesheets/photo_show.scss
@@ -213,5 +213,5 @@
      min-width: 450px;
      width: 50%;
      height: 100%;
-    font-family:Verdana, sans-serif;
+    font-family:"Lato",sans-serif;
   }
