change profile layout to reduce confusion

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -15,7 +15,11 @@
   float:left;
   padding-top:0px;
   height: 1300px;
-  background-image: url(http://res.cloudinary.com/dcqvnxgiy/image/upload/v1457052594/Xs3OOvu_gdxvm9.gif);
+  /*background-image: url(http://res.cloudinary.com/dcqvnxgiy/image/upload/v1457052594/Xs3OOvu_gdxvm9.gif);*/
+  /*background-image: url(http://res.cloudinary.com/dcqvnxgiy/image/upload/v1456645652/z8Bu8FZ_rcqmco.gif);*/
+  background-image: url(http://i.imgur.com/2hyr53U.gif);
+  /*background-image: url(http://i.imgur.com/g11g1Vm.jpg);*/
+  /*background-image: url(http://i.imgur.com/kB6Pl6C.gif);*/
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
