minor css styling

--- a/app/assets/stylesheets/comment.scss
+++ b/app/assets/stylesheets/comment.scss
@@ -65,7 +65,8 @@ p {
 
   padding-top: rem(10);
   display: table-cell;
-  width: 75px;
+  /*width: 75px;*/
+  padding-right: 30px;
 
 
   .avatar {
