--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -238,8 +238,8 @@
   padding-top: 1%;
   padding-bottom: 2%;
   min-height: 300px;
-  /*background-color: #19191B;*/
-  background-image: url(http://res.cloudinary.com/dcqvnxgiy/image/upload/v1456954496/f5_mvy8h2.jpg);
+  background-color: #DDDDDE;
+
   background-position: 90%;
   /*min-height: 400px;*/
 
