--- a/app/assets/stylesheets/photo.scss
+++ b/app/assets/stylesheets/photo.scss
@@ -38,7 +38,7 @@
   flex: auto;
   width: 250px;
   max-width: 325px;
-  padding: 1px;
+  /*padding: 1px;*/
   overflow: hidden;
   text-align: center;
   /*margin: 0 auto;*/
