--- a/app/assets/stylesheets/photo_show.scss
+++ b/app/assets/stylesheets/photo_show.scss
@@ -3,7 +3,7 @@
 
   width: 100%;
   height: 100%;
-  background: #f0f2fa;
+  background: #DDDDDE;
 
   min-height: 500px;
   display: flex;
@@ -214,8 +214,8 @@
     flex-direction: column;
     justify-content: center;
     align-content: flex-start;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
      min-width: 450px;
      width: 50%;
      height: 100%;
@@ -234,8 +234,8 @@
     flex-direction: column;
     justify-content: center;
     align-content: flex-start;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 40px;
+    padding-right: 40px;
      min-width: 450px;
      width: 60%;
      height: 100%;
