--- a/app/assets/stylesheets/photo_show.scss
+++ b/app/assets/stylesheets/photo_show.scss
@@ -351,7 +351,9 @@
 
 .uploader-text {
   text-align: center;
-  font-color: black;
+  color: white;
+    -webkit-text-stroke: 1px black;
+
   font-size: 20px;
 
   user-drag: none;
